--- a/update/Anc2.html
+++ b/update/Anc2.html
@@ -47,7 +47,7 @@ text-align:center;
 <body>
 <font face="Comic Sans MS">
     <div id="container">
-     <h2><font color="White" size="6">Annoucements</font></h2>
+     <h2><font color="White" size="6">Annoucements!</font></h2>
     </div>
 <p>
 <div style="font-weight: bold; text-align: center; width: 100%;">
